Fix emoji alignment on announcements: wrapping with a `<span>`. :tada:

--- a/css/aa.css
+++ b/css/aa.css
@@ -3590,9 +3590,18 @@ body.is-mobile #game-tips #game-announcements {
   vertical-align: middle;
 }
 
-#game-tips #game-announcements span:not(.hide-on-mobile) {
+/* TODO: review and remove */
+#game-tips #game-announcements span:not(.hide-on-mobile):not(.inline-emoji) {
   display: block;
   width: 100%;
+}
+
+#game-tips #game-announcements .inline-emoji {
+  /* font may be required for consistent alignment on iOS Safari. :X */
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  line-height: 1em;
+  vertical-align: middle;
 }
 
 #game-tips.has-announcement .tips-container {
